--- a/src/Less/SerialConfig.less
+++ b/src/Less/SerialConfig.less
@@ -1,5 +1,6 @@
 .config{
     width:100%;
+    border-bottom: 1px solid #e7e7e7;
     .config-left{
         height: 800px;
         background: url('../Images/configs.jpg') no-repeat center center/cover;
@@ -17,7 +18,8 @@
         }
     }
     .config-right{
-        padding:166px 0;
+        height: 800px;
+        padding:236px 0;
         position: relative;
         h3{
             font-size: 22px;
@@ -25,10 +27,10 @@
             background: url('../Images/title_bg.png') no-repeat center bottom;
             padding: 30px 0;
             margin-bottom:30px;
-            font-family: "FZYaoti"            
+            font-family: "FZYaoti"
         }
         .config-body{
-            width:250px;
+            width:350px;
             font-size:14px;
             label{
                 font-size: 16px;
@@ -40,7 +42,7 @@
                 border:0;
             }
             .btnConnect{
-                height: 30px;
+                height:32px;
                 margin-top:20px;
                 border-radius: 10px;
                 border:0;
@@ -63,5 +65,5 @@
             width:50%;
         }
     }
-    
+
 }
