--- a/src/Less/index.less
+++ b/src/Less/index.less
@@ -3,14 +3,14 @@ html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, l
 	padding: 0;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 html,body{
 	font-size: 12px;
-	font-family: "Open Sans", Helvetica Neue, Sans-serif;	
-	background:  #f3f5f8;
+	font-family: "Open Sans", Helvetica Neue, Sans-serif;
+	background:  #fff;
 }
 ol, ul {
 	list-style: none;
