--- a/src/Less/History.less
+++ b/src/Less/History.less
@@ -1,7 +1,8 @@
+@import '~antd/dist/antd.css';
+
 .history{
     width:100%;
-    background: url("../Images/history.jpg") no-repeat center center/cover;
-    background-attachment: fixed;
+    background: #f3f5f8;
     .history-t {
         border-bottom:1px solid #CCCCCC;
         background: #fff;
