--- a/src/Less/Digital.less
+++ b/src/Less/Digital.less
@@ -1,7 +1,8 @@
 .digital{
-    width: 100%;
     background: url(../Images/digital_bg2.jpg) no-repeat center center/cover;
     background-attachment: fixed;
+    margin-top:60px;
+    width:100%;
     .digital-t{
         border-bottom:1px solid #CCCCCC;
         background: #fff;
@@ -39,6 +40,7 @@
         .digital-nums{
             padding:50px 0;
             color:#fff;
+            overflow: hidden;
             li{
                 height: 200px;
                 position: relative;
@@ -62,6 +64,8 @@
             }
         }
         .digital-charts{
+            clear: both;
+            overflow: hidden;
             background: #fff;
             padding-top:30px;
         }
