--- a/src/Less/History.less
+++ b/src/Less/History.less
@@ -3,6 +3,7 @@
 .history{
     width:100%;
     background: #f3f5f8;
+    margin-top:60px;
     .history-t {
         border-bottom:1px solid #CCCCCC;
         background: #fff;
