--- a/src/Less/Digital.less
+++ b/src/Less/Digital.less
@@ -20,6 +20,13 @@
             padding:20px 0;
             box-shadow: 0 5px 5px 0
             rgba(0,0,0,0.3);
+            position: relative;
+        }
+        .time-up{
+            position: absolute;
+            left:20px;
+            font-size: 14px;
+            line-height: 30px;
         }
         .sensorid-t{
             font-size: 20px;
