--- a/src/Less/History.less
+++ b/src/Less/History.less
@@ -3,7 +3,6 @@
 .history{
     width:100%;
     background: #f3f5f8;
-    margin-top:60px;
     .history-t {
         border-bottom:1px solid #CCCCCC;
         background: #fff;
@@ -16,7 +15,7 @@
         }
     }
     .history-body{
-      padding: 30px 0;
+      padding: 30px;
         .search-condition{
             padding:0 10px;
             margin-bottom:10px;
