--- a/src/Less/History.less
+++ b/src/Less/History.less
@@ -5,7 +5,7 @@
     background: #f3f5f8;
     .history-t {
         border-bottom:1px solid #CCCCCC;
-        background: #fff;
+        background: #f0f0f0;
         h3{
             font-size: 30px;
             color: #353535;
@@ -15,7 +15,6 @@
         }
     }
     .history-body{
-      padding: 30px;
         .search-condition{
             padding:0 10px;
             margin-bottom:10px;
