--- a/src/Less/Digital.less
+++ b/src/Less/Digital.less
@@ -1,10 +1,10 @@
 .digital{
-    background: url(../Images/digital_bg2.jpg) no-repeat center center/cover;
+    background: url(../Images/bg.jpg) no-repeat center center/cover;
     background-attachment: fixed;
     width:100%;
     .digital-t{
         border-bottom:1px solid #CCCCCC;
-        background: #fff;
+        background: #f0f0f0;
         h3{
             font-size: 30px;
             color: #353535;
@@ -15,16 +15,17 @@
     }
     .digital-body{
         .digital-info{
-            background: #fff;
-            padding:20px 0;
+            background: #EDFEE0;
             box-shadow: 0 5px 5px 0
             rgba(0,0,0,0.3);
             position: relative;
+            overflow: hidden;
+        }
+        .info-left, .info-right{
+            margin:20px 0;
         }
         .time-up{
-            position: absolute;
-            left:20px;
-            font-size: 14px;
+            font-size: 18px;
             line-height: 30px;
         }
         .sensorid-t{
@@ -37,13 +38,14 @@
             width:80px;
         }
         .battery-img{
-            margin-left:30px;
+            margin-left:10px;
             margin-top:-5px;
             width:48px;
             height: 24px;
             line-height: 32px;
         }
         .digital-nums{
+            clear: both;
             padding:50px 0;
             color:#fff;
             overflow: hidden;
@@ -72,7 +74,7 @@
         .digital-charts{
             clear: both;
             overflow: hidden;
-            background: #fff;
+            background: #EDFEE0;
             padding-top:30px;
         }
     }
