--- a/src/Less/History.less
+++ b/src/Less/History.less
@@ -5,7 +5,7 @@
     background: #f3f5f8;
     .history-t {
         border-bottom:1px solid #CCCCCC;
-        background: #f0f0f0;
+        background: #fff;
         h3{
             font-size: 30px;
             color: #353535;
