--- a/src/Less/Digital.less
+++ b/src/Less/Digital.less
@@ -1,3 +1,5 @@
+@import '~antd/dist/antd.css';
+
 .digital{
     width:100%;
     .digital-t{
@@ -14,7 +16,7 @@
     .digital-body{
         .digital-info{
             background: #f3f5f8;
-            box-shadow: 0 5px 5px 0 rgba(0,0,0,0.3);
+            border-bottom:1px solid #CCCCCC;
             position: relative;
             overflow: hidden;
         }
